Background image has been Added + re-postition some items in scence builder